cmake_minimum_required(VERSION 3.12.2 FATAL_ERROR)

project( FaceTools)

set(WITH_RIMG TRUE)
set(WITH_R3DIO TRUE)
set(WITH_QTOOLS TRUE)
set(WITH_RNONRIGID TRUE)
set(WITH_LUA TRUE)
include( "cmake/FindLibs.cmake")

set( INCLUDE_DIR "${PROJECT_SOURCE_DIR}/include")
set( INCLUDE_F "${INCLUDE_DIR}/${PROJECT_NAME}")
set( FORMS_DIR "${PROJECT_SOURCE_DIR}/forms")
set( SRC_DIR "${PROJECT_SOURCE_DIR}/src")

set( INCLUDE_ACTION_DIR "${INCLUDE_F}/Action")
set( INCLUDE_DETECT_DIR "${INCLUDE_F}/Detect")
set( INCLUDE_FILEIO_DIR "${INCLUDE_F}/FileIO")
set( INCLUDE_LNDMRK_DIR "${INCLUDE_F}/LndMrk")
set( INCLUDE_METRIC_DIR "${INCLUDE_F}/Metric")
set( INCLUDE_REPORT_DIR "${INCLUDE_F}/Report")
set( INCLUDE_WIDGET_DIR "${INCLUDE_F}/Widget")
set( INCLUDE_INT_DIR "${INCLUDE_F}/Interactor")
set( INCLUDE_VIS_DIR "${INCLUDE_F}/Vis")

set( SRC_ACTION_DIR "${SRC_DIR}/Action")
set( SRC_DETECT_DIR "${SRC_DIR}/Detect")
set( SRC_FILEIO_DIR "${SRC_DIR}/FileIO")
set( SRC_LNDMRK_DIR "${SRC_DIR}/LndMrk")
set( SRC_METRIC_DIR "${SRC_DIR}/Metric")
set( SRC_REPORT_DIR "${SRC_DIR}/Report")
set( SRC_WIDGET_DIR "${SRC_DIR}/Widget")
set( SRC_INT_DIR "${SRC_DIR}/Interactor")
set( SRC_VIS_DIR "${SRC_DIR}/Vis")

include_directories( ${INCLUDE_F})
include_directories( ${INCLUDE_DIR})
include_directories( ${PROJECT_BINARY_DIR}) # Req. for generated Qt form headers

set( FORMS
    "${FORMS_DIR}/ChartDialog.ui"
    "${FORMS_DIR}/LandmarksCheckDialog.ui"
    "${FORMS_DIR}/LandmarksDialog.ui"
    "${FORMS_DIR}/MeshInfoDialog.ui"
    "${FORMS_DIR}/MetricsDialog.ui"
    "${FORMS_DIR}/PhenotypesDialog.ui"
    "${FORMS_DIR}/ReportChooserDialog.ui"
    "${FORMS_DIR}/ResizeDialog.ui"
    "${FORMS_DIR}/ScanInfoDialog.ui"
    )

set( QOBJECTS
    "${INCLUDE_ACTION_DIR}/ActionAddPath.h"
    "${INCLUDE_ACTION_DIR}/ActionAlignModel.h"
    "${INCLUDE_ACTION_DIR}/ActionBackfaceCulling.h"
    "${INCLUDE_ACTION_DIR}/ActionCentreModel.h"
    "${INCLUDE_ACTION_DIR}/ActionChangeColourMappingRange.h"
    "${INCLUDE_ACTION_DIR}/ActionCloseAll.h"
    "${INCLUDE_ACTION_DIR}/ActionClose.h"
    "${INCLUDE_ACTION_DIR}/ActionCopyAllPaths.h"
    "${INCLUDE_ACTION_DIR}/ActionCopyPath.h"
    "${INCLUDE_ACTION_DIR}/ActionCopyView.h"
    "${INCLUDE_ACTION_DIR}/ActionDeleteAllPaths.h"
    "${INCLUDE_ACTION_DIR}/ActionDeletePath.h"
    "${INCLUDE_ACTION_DIR}/ActionDetectFace.h"
    "${INCLUDE_ACTION_DIR}/ActionDiscardManifold.h"
    "${INCLUDE_ACTION_DIR}/ActionEditLandmarks.h"
    "${INCLUDE_ACTION_DIR}/ActionEditPaths.h"
    "${INCLUDE_ACTION_DIR}/ActionExportMask.h"
    "${INCLUDE_ACTION_DIR}/ActionExportMetaData.h"
    "${INCLUDE_ACTION_DIR}/ActionExportPDF.h"
    "${INCLUDE_ACTION_DIR}/ActionExtractFace.h"
    "${INCLUDE_ACTION_DIR}/ActionFillHoles.h"
    "${INCLUDE_ACTION_DIR}/ActionFixNormals.h"
    "${INCLUDE_ACTION_DIR}/ActionGetFaceManifold.h"
    "${INCLUDE_ACTION_DIR}/ActionImportMetaData.h"
    "${INCLUDE_ACTION_DIR}/ActionInvertNormals.h"
    "${INCLUDE_ACTION_DIR}/ActionLoad.h"
    "${INCLUDE_ACTION_DIR}/ActionMakeHalfFace.h"
    "${INCLUDE_ACTION_DIR}/ActionMapCurvature.h"
    "${INCLUDE_ACTION_DIR}/ActionMapDelta.h"
    "${INCLUDE_ACTION_DIR}/ActionMapSymmetry.h"
    "${INCLUDE_ACTION_DIR}/ActionMarquee.h"
    "${INCLUDE_ACTION_DIR}/ActionMirrorLandmarks.h"
    "${INCLUDE_ACTION_DIR}/ActionMoveView.h"
    "${INCLUDE_ACTION_DIR}/ActionOrientCamera.h"
    "${INCLUDE_ACTION_DIR}/ActionRadialSelect.h"
    "${INCLUDE_ACTION_DIR}/ActionRedo.h"
    "${INCLUDE_ACTION_DIR}/ActionReflectModel.h"
    #"${INCLUDE_ACTION_DIR}/ActionRemesh.h"
    "${INCLUDE_ACTION_DIR}/ActionRemoveManifolds.h"
    "${INCLUDE_ACTION_DIR}/ActionRenamePath.h"
    "${INCLUDE_ACTION_DIR}/ActionResetDetection.h"
    "${INCLUDE_ACTION_DIR}/ActionResizeModel.h"
    "${INCLUDE_ACTION_DIR}/ActionRestoreLandmarks.h"
    "${INCLUDE_ACTION_DIR}/ActionRestoreSingleLandmark.h"
    "${INCLUDE_ACTION_DIR}/ActionRotateCamera.h"
    "${INCLUDE_ACTION_DIR}/ActionRotateModel.h"
    "${INCLUDE_ACTION_DIR}/ActionSaveAs.h"
    "${INCLUDE_ACTION_DIR}/ActionSave.h"
    "${INCLUDE_ACTION_DIR}/ActionSaveScreenshot.h"
    "${INCLUDE_ACTION_DIR}/ActionSelect.h"
    "${INCLUDE_ACTION_DIR}/ActionSetFocus.h"
    "${INCLUDE_ACTION_DIR}/ActionSetMaxScalarColour.h"
    "${INCLUDE_ACTION_DIR}/ActionSetMinScalarColour.h"
    "${INCLUDE_ACTION_DIR}/ActionSetNumScalarColours.h"
    "${INCLUDE_ACTION_DIR}/ActionSetOpacity.h"
    "${INCLUDE_ACTION_DIR}/ActionSetParallelProjection.h"
    "${INCLUDE_ACTION_DIR}/ActionSetSurfaceColour.h"
    "${INCLUDE_ACTION_DIR}/ActionShowMeshInfo.h"
    "${INCLUDE_ACTION_DIR}/ActionShowMetrics.h"
    "${INCLUDE_ACTION_DIR}/ActionShowPhenotypes.h"
    "${INCLUDE_ACTION_DIR}/ActionShowScanInfo.h"
    "${INCLUDE_ACTION_DIR}/ActionSlice.h"
    "${INCLUDE_ACTION_DIR}/ActionSmooth.h"
    "${INCLUDE_ACTION_DIR}/ActionSynchroniseCameras.h"
    "${INCLUDE_ACTION_DIR}/ActionToggleAxes.h"
    "${INCLUDE_ACTION_DIR}/ActionToggleCameraActorInteraction.h"
    "${INCLUDE_ACTION_DIR}/ActionToggleMask.h"
    "${INCLUDE_ACTION_DIR}/ActionToggleLegend.h"
    "${INCLUDE_ACTION_DIR}/ActionToggleStereo.h"
    "${INCLUDE_ACTION_DIR}/ActionUndo.h"
    "${INCLUDE_ACTION_DIR}/ActionUpdateMeasurements.h"
    "${INCLUDE_ACTION_DIR}/ActionUpdateStats.h"
    "${INCLUDE_ACTION_DIR}/ActionUpdateThumbnail.h"
    "${INCLUDE_ACTION_DIR}/ActionUpdateU3D.h"
    "${INCLUDE_ACTION_DIR}/ActionVisualise.h"
    "${INCLUDE_ACTION_DIR}/CameraWorker.h"
    "${INCLUDE_ACTION_DIR}/FaceAction.h"
    "${INCLUDE_ACTION_DIR}/FaceActionManager.h"
    "${INCLUDE_ACTION_DIR}/FaceActionWorker.h"
    "${INCLUDE_ACTION_DIR}/UndoStates.h"

    "${INCLUDE_FILEIO_DIR}/AsyncModelLoader.h"
    "${INCLUDE_FILEIO_DIR}/BulkMetadataReader.h"

    "${INCLUDE_METRIC_DIR}/Chart.h"

    "${INCLUDE_REPORT_DIR}/Report.h"

    "${INCLUDE_INT_DIR}/ActionClickHandler.h"
    "${INCLUDE_INT_DIR}/ContextMenuHandler.h"
    "${INCLUDE_INT_DIR}/GizmoHandler.h"
    "${INCLUDE_INT_DIR}/LandmarksHandler.h"
    "${INCLUDE_INT_DIR}/MovementNotifier.h"
    "${INCLUDE_INT_DIR}/PathsHandler.h"
    "${INCLUDE_INT_DIR}/RadialSelectHandler.h"
    "${INCLUDE_INT_DIR}/SelectNotifier.h"
    "${INCLUDE_INT_DIR}/SurfaceValueHandler.h"

    "${INCLUDE_WIDGET_DIR}/ChartDialog.h"
    "${INCLUDE_WIDGET_DIR}/CheckAllTableHeader.h"
    "${INCLUDE_WIDGET_DIR}/LandmarksCheckDialog.h"
    "${INCLUDE_WIDGET_DIR}/LandmarksDialog.h"
    "${INCLUDE_WIDGET_DIR}/MeshInfoDialog.h"
    "${INCLUDE_WIDGET_DIR}/MetricsDialog.h"
    "${INCLUDE_WIDGET_DIR}/PhenotypesDialog.h"
    "${INCLUDE_WIDGET_DIR}/ReportChooserDialog.h"
    "${INCLUDE_WIDGET_DIR}/ResizeDialog.h"
    "${INCLUDE_WIDGET_DIR}/ScanInfoDialog.h"

    "${INCLUDE_F}/FaceModelViewer.h"
    "${INCLUDE_F}/FaceTypes.h"
    "${INCLUDE_F}/ModelViewer.h"
    "${INCLUDE_F}/ModelViewerAnnotator.h"
    "${INCLUDE_F}/MultiFaceModelViewer.h"
    )

set( INCLUDE_FILES
    ${QOBJECTS}
    "${INCLUDE_F}.h"

    "${INCLUDE_ACTION_DIR}/FaceModelState.h"
    "${INCLUDE_ACTION_DIR}/UndoState.h"

    "${INCLUDE_DETECT_DIR}/FaceAlignmentFinder.h"
    "${INCLUDE_DETECT_DIR}/FaceFinder2D.h"
    "${INCLUDE_DETECT_DIR}/FeaturesDetector.h"

    "${INCLUDE_FILEIO_DIR}/FaceModelAssImpFileHandlerFactory.h"
    "${INCLUDE_FILEIO_DIR}/FaceModelDatabase.h"
    "${INCLUDE_FILEIO_DIR}/FaceModelFileData.h"
    "${INCLUDE_FILEIO_DIR}/FaceModelFileHandlerException.h"
    "${INCLUDE_FILEIO_DIR}/FaceModelFileHandlerMap.h"
    "${INCLUDE_FILEIO_DIR}/FaceModelManager.h"
    "${INCLUDE_FILEIO_DIR}/FaceModelFileHandler.h"
    "${INCLUDE_FILEIO_DIR}/FaceModelAssImpFileHandler.h"
    "${INCLUDE_FILEIO_DIR}/FaceModel3DSFileHandler.h"
    "${INCLUDE_FILEIO_DIR}/FaceModelOBJFileHandler.h"
    "${INCLUDE_FILEIO_DIR}/FaceModelPLYFileHandler.h"
    "${INCLUDE_FILEIO_DIR}/FaceModelSTLFileHandler.h"
    "${INCLUDE_FILEIO_DIR}/FaceModelU3DFileHandler.h"
    "${INCLUDE_FILEIO_DIR}/FaceModelXMLFileHandler.h"
    "${INCLUDE_FILEIO_DIR}/LoadFaceModelsHelper.h"

    "${INCLUDE_INT_DIR}/MouseHandler.h"
    "${INCLUDE_INT_DIR}/ViewerNotifier.h"

    "${INCLUDE_LNDMRK_DIR}/Landmark.h"
    "${INCLUDE_LNDMRK_DIR}/LandmarkSet.h"
    "${INCLUDE_LNDMRK_DIR}/LandmarksManager.h"

    "${INCLUDE_METRIC_DIR}/Gene.h"
    "${INCLUDE_METRIC_DIR}/GeneManager.h"
    "${INCLUDE_METRIC_DIR}/GrowthData.h"
    "${INCLUDE_METRIC_DIR}/GrowthDataRanker.h"
    "${INCLUDE_METRIC_DIR}/MetricTypeRegistry.h"
    "${INCLUDE_METRIC_DIR}/MetricManager.h"
    "${INCLUDE_METRIC_DIR}/MetricSet.h"
    "${INCLUDE_METRIC_DIR}/MetricValue.h"
    "${INCLUDE_METRIC_DIR}/Phenotype.h"
    "${INCLUDE_METRIC_DIR}/PhenotypeManager.h"
    "${INCLUDE_METRIC_DIR}/StatsManager.h"
    "${INCLUDE_METRIC_DIR}/Syndrome.h"
    "${INCLUDE_METRIC_DIR}/SyndromeManager.h"
    "${INCLUDE_METRIC_DIR}/AngleMetricType.h"
    "${INCLUDE_METRIC_DIR}/AsymmetryMetricType.h"
    "${INCLUDE_METRIC_DIR}/DepthMetricType.h"
    "${INCLUDE_METRIC_DIR}/DistanceMetricType.h"
    "${INCLUDE_METRIC_DIR}/Metric.h"
    "${INCLUDE_METRIC_DIR}/MetricType.h"
    "${INCLUDE_METRIC_DIR}/RegionMetricType.h"

    "${INCLUDE_REPORT_DIR}/ReportManager.h"

    "${INCLUDE_VIS_DIR}/AngleView.h"
    "${INCLUDE_VIS_DIR}/AngleVisualiser.h"
    "${INCLUDE_VIS_DIR}/AsymmetryView.h"
    "${INCLUDE_VIS_DIR}/AsymmetryVisualiser.h"
    "${INCLUDE_VIS_DIR}/BaseVisualisation.h"
    "${INCLUDE_VIS_DIR}/BoundingView.h"
    "${INCLUDE_VIS_DIR}/BoundingVisualisation.h"
    "${INCLUDE_VIS_DIR}/ColourVisualisation.h"
    "${INCLUDE_VIS_DIR}/DepthVisualiser.h"
    "${INCLUDE_VIS_DIR}/DistanceVisualiser.h"
    "${INCLUDE_VIS_DIR}/FaceView.h"
    "${INCLUDE_VIS_DIR}/LabelsView.h"
    "${INCLUDE_VIS_DIR}/LabelsVisualisation.h"
    "${INCLUDE_VIS_DIR}/LandmarkLabelsView.h"
    "${INCLUDE_VIS_DIR}/LandmarkSetView.h"
    "${INCLUDE_VIS_DIR}/LandmarksVisualisation.h"
    "${INCLUDE_VIS_DIR}/LineView.h"
    "${INCLUDE_VIS_DIR}/LineVisualiser.h"
    "${INCLUDE_VIS_DIR}/LoopView.h"
    "${INCLUDE_VIS_DIR}/LoopVisualiser.h"
    "${INCLUDE_VIS_DIR}/MaskView.h"
    "${INCLUDE_VIS_DIR}/MaskVisualisation.h"
    "${INCLUDE_VIS_DIR}/MetricVisualiser.h"
    "${INCLUDE_VIS_DIR}/OutlinesVisualisation.h"
    "${INCLUDE_VIS_DIR}/PathSetVisualisation.h"
    "${INCLUDE_VIS_DIR}/PathView.h"
    "${INCLUDE_VIS_DIR}/PathSetView.h"
    "${INCLUDE_VIS_DIR}/PlaneView.h"
    "${INCLUDE_VIS_DIR}/PlaneVisualisation.h"
    "${INCLUDE_VIS_DIR}/PointsView.h"
    "${INCLUDE_VIS_DIR}/PolyLabelsView.h"
    "${INCLUDE_VIS_DIR}/RadialSelectView.h"
    "${INCLUDE_VIS_DIR}/RadialSelectVisualisation.h"
    "${INCLUDE_VIS_DIR}/RegionVisualiser.h"
    "${INCLUDE_VIS_DIR}/SimpleView.h"
    "${INCLUDE_VIS_DIR}/SphereView.h"
    "${INCLUDE_VIS_DIR}/TextureVisualisation.h"
    "${INCLUDE_VIS_DIR}/ViewInterface.h"
    "${INCLUDE_VIS_DIR}/VertexLabelsView.h"
    "${INCLUDE_VIS_DIR}/WireframeVisualisation.h"

    "${INCLUDE_WIDGET_DIR}/IntTableWidgetItem.h"

    "${INCLUDE_F}/Ethnicities.h"
    "${INCLUDE_F}/FaceAssessment.h"
    "${INCLUDE_F}/FaceModel.h"
    "${INCLUDE_F}/FaceModelCurvature.h"
    "${INCLUDE_F}/FaceModelCurvatureStore.h"
    "${INCLUDE_F}/FaceModelDelta.h"
    "${INCLUDE_F}/FaceModelDeltaStore.h"
    "${INCLUDE_F}/FaceModelSymmetry.h"
    "${INCLUDE_F}/FaceModelSymmetryStore.h"
    "${INCLUDE_F}/FaceViewSet.h"
    "${INCLUDE_F}/MaskRegistration.h"
    "${INCLUDE_F}/MiscFunctions.h"
    "${INCLUDE_F}/ModelSelect.h"
    "${INCLUDE_F}/Path.h"
    "${INCLUDE_F}/PathSet.h"
    "${INCLUDE_F}/U3DCache.h"
    )

set( SRC_FILES
    "${SRC_DIR}/${PROJECT_NAME}.cpp"

    "${SRC_ACTION_DIR}/ActionAddPath.cpp"
    "${SRC_ACTION_DIR}/ActionAlignModel.cpp"
    "${SRC_ACTION_DIR}/ActionBackfaceCulling.cpp"
    "${SRC_ACTION_DIR}/ActionCentreModel.cpp"
    "${SRC_ACTION_DIR}/ActionChangeColourMappingRange.cpp"
    "${SRC_ACTION_DIR}/ActionCloseAll.cpp"
    "${SRC_ACTION_DIR}/ActionClose.cpp"
    "${SRC_ACTION_DIR}/ActionCopyAllPaths.cpp"
    "${SRC_ACTION_DIR}/ActionCopyPath.cpp"
    "${SRC_ACTION_DIR}/ActionCopyView.cpp"
    "${SRC_ACTION_DIR}/ActionDeleteAllPaths.cpp"
    "${SRC_ACTION_DIR}/ActionDeletePath.cpp"
    "${SRC_ACTION_DIR}/ActionDetectFace.cpp"
    "${SRC_ACTION_DIR}/ActionDiscardManifold.cpp"
    "${SRC_ACTION_DIR}/ActionEditLandmarks.cpp"
    "${SRC_ACTION_DIR}/ActionEditPaths.cpp"
    "${SRC_ACTION_DIR}/ActionExportMask.cpp"
    "${SRC_ACTION_DIR}/ActionExportMetaData.cpp"
    "${SRC_ACTION_DIR}/ActionExportPDF.cpp"
    "${SRC_ACTION_DIR}/ActionExtractFace.cpp"
    "${SRC_ACTION_DIR}/ActionFillHoles.cpp"
    "${SRC_ACTION_DIR}/ActionFixNormals.cpp"
    "${SRC_ACTION_DIR}/ActionGetFaceManifold.cpp"
    "${SRC_ACTION_DIR}/ActionImportMetaData.cpp"
    "${SRC_ACTION_DIR}/ActionInvertNormals.cpp"
    "${SRC_ACTION_DIR}/ActionLoad.cpp"
    "${SRC_ACTION_DIR}/ActionMakeHalfFace.cpp"
    "${SRC_ACTION_DIR}/ActionMapCurvature.cpp"
    "${SRC_ACTION_DIR}/ActionMapDelta.cpp"
    "${SRC_ACTION_DIR}/ActionMapSymmetry.cpp"
    "${SRC_ACTION_DIR}/ActionMarquee.cpp"
    "${SRC_ACTION_DIR}/ActionMirrorLandmarks.cpp"
    "${SRC_ACTION_DIR}/ActionMoveView.cpp"
    "${SRC_ACTION_DIR}/ActionOrientCamera.cpp"
    "${SRC_ACTION_DIR}/ActionRadialSelect.cpp"
    "${SRC_ACTION_DIR}/ActionRedo.cpp"
    "${SRC_ACTION_DIR}/ActionReflectModel.cpp"
    #"${SRC_ACTION_DIR}/ActionRemesh.cpp"
    "${SRC_ACTION_DIR}/ActionRemoveManifolds.cpp"
    "${SRC_ACTION_DIR}/ActionRenamePath.cpp"
    "${SRC_ACTION_DIR}/ActionResetDetection.cpp"
    "${SRC_ACTION_DIR}/ActionResizeModel.cpp"
    "${SRC_ACTION_DIR}/ActionRestoreLandmarks.cpp"
    "${SRC_ACTION_DIR}/ActionRestoreSingleLandmark.cpp"
    "${SRC_ACTION_DIR}/ActionRotateCamera.cpp"
    "${SRC_ACTION_DIR}/ActionRotateModel.cpp"
    "${SRC_ACTION_DIR}/ActionSaveAs.cpp"
    "${SRC_ACTION_DIR}/ActionSave.cpp"
    "${SRC_ACTION_DIR}/ActionSaveScreenshot.cpp"
    "${SRC_ACTION_DIR}/ActionSelect.cpp"
    "${SRC_ACTION_DIR}/ActionSetFocus.cpp"
    "${SRC_ACTION_DIR}/ActionSetMaxScalarColour.cpp"
    "${SRC_ACTION_DIR}/ActionSetMinScalarColour.cpp"
    "${SRC_ACTION_DIR}/ActionSetNumScalarColours.cpp"
    "${SRC_ACTION_DIR}/ActionSetOpacity.cpp"
    "${SRC_ACTION_DIR}/ActionSetParallelProjection.cpp"
    "${SRC_ACTION_DIR}/ActionSetSurfaceColour.cpp"
    "${SRC_ACTION_DIR}/ActionShowMeshInfo.cpp"
    "${SRC_ACTION_DIR}/ActionShowMetrics.cpp"
    "${SRC_ACTION_DIR}/ActionShowPhenotypes.cpp"
    "${SRC_ACTION_DIR}/ActionShowScanInfo.cpp"
    "${SRC_ACTION_DIR}/ActionSlice.cpp"
    "${SRC_ACTION_DIR}/ActionSmooth.cpp"
    "${SRC_ACTION_DIR}/ActionSynchroniseCameras.cpp"
    "${SRC_ACTION_DIR}/ActionToggleAxes.cpp"
    "${SRC_ACTION_DIR}/ActionToggleCameraActorInteraction.cpp"
    "${SRC_ACTION_DIR}/ActionToggleMask.cpp"
    "${SRC_ACTION_DIR}/ActionToggleLegend.cpp"
    "${SRC_ACTION_DIR}/ActionToggleStereo.cpp"
    "${SRC_ACTION_DIR}/ActionUndo.cpp"
    "${SRC_ACTION_DIR}/ActionUpdateMeasurements.cpp"
    "${SRC_ACTION_DIR}/ActionUpdateStats.cpp"
    "${SRC_ACTION_DIR}/ActionUpdateThumbnail.cpp"
    "${SRC_ACTION_DIR}/ActionUpdateU3D.cpp"
    "${SRC_ACTION_DIR}/ActionVisualise.cpp"
    "${SRC_ACTION_DIR}/CameraWorker.cpp"
    "${SRC_ACTION_DIR}/FaceAction.cpp"
    "${SRC_ACTION_DIR}/FaceActionManager.cpp"
    "${SRC_ACTION_DIR}/FaceActionWorker.cpp"
    "${SRC_ACTION_DIR}/FaceModelState.cpp"
    "${SRC_ACTION_DIR}/UndoState.cpp"
    "${SRC_ACTION_DIR}/UndoStates.cpp"

    "${SRC_DETECT_DIR}/FaceAlignmentFinder.cpp"
    "${SRC_DETECT_DIR}/FaceFinder2D.cpp"
    "${SRC_DETECT_DIR}/FeaturesDetector.cpp"

    "${SRC_FILEIO_DIR}/AsyncModelLoader.cpp"
    "${SRC_FILEIO_DIR}/BulkMetadataReader.cpp"
    "${SRC_FILEIO_DIR}/FaceModelAssImpFileHandler.cpp"
    "${SRC_FILEIO_DIR}/FaceModelAssImpFileHandlerFactory.cpp"
    "${SRC_FILEIO_DIR}/FaceModelDatabase.cpp"
    "${SRC_FILEIO_DIR}/FaceModelFileData.cpp"
    "${SRC_FILEIO_DIR}/FaceModelFileHandler.cpp"
    "${SRC_FILEIO_DIR}/FaceModelFileHandlerException.cpp"
    "${SRC_FILEIO_DIR}/FaceModelFileHandlerMap.cpp"
    "${SRC_FILEIO_DIR}/FaceModelManager.cpp"
    "${SRC_FILEIO_DIR}/FaceModel3DSFileHandler.cpp"
    "${SRC_FILEIO_DIR}/FaceModelOBJFileHandler.cpp"
    "${SRC_FILEIO_DIR}/FaceModelPLYFileHandler.cpp"
    "${SRC_FILEIO_DIR}/FaceModelSTLFileHandler.cpp"
    "${SRC_FILEIO_DIR}/FaceModelXMLFileHandler.cpp"
    "${SRC_FILEIO_DIR}/FaceModelU3DFileHandler.cpp"
    "${SRC_FILEIO_DIR}/LoadFaceModelsHelper.cpp"

    "${SRC_INT_DIR}/ActionClickHandler.cpp"
    "${SRC_INT_DIR}/ContextMenuHandler.cpp"
    "${SRC_INT_DIR}/GizmoHandler.cpp"
    "${SRC_INT_DIR}/LandmarksHandler.cpp"
    "${SRC_INT_DIR}/MouseHandler.cpp"
    "${SRC_INT_DIR}/MovementNotifier.cpp"
    "${SRC_INT_DIR}/PathsHandler.cpp"
    "${SRC_INT_DIR}/RadialSelectHandler.cpp"
    "${SRC_INT_DIR}/SelectNotifier.cpp"
    "${SRC_INT_DIR}/SurfaceValueHandler.cpp"
    "${SRC_INT_DIR}/ViewerNotifier.cpp"

    "${SRC_LNDMRK_DIR}/Landmark.cpp"
    "${SRC_LNDMRK_DIR}/LandmarkSet.cpp"
    "${SRC_LNDMRK_DIR}/LandmarksManager.cpp"

    "${SRC_METRIC_DIR}/AngleMetricType.cpp"
    "${SRC_METRIC_DIR}/AsymmetryMetricType.cpp"
    "${SRC_METRIC_DIR}/DepthMetricType.cpp"
    "${SRC_METRIC_DIR}/DistanceMetricType.cpp"
    "${SRC_METRIC_DIR}/Chart.cpp"
    "${SRC_METRIC_DIR}/Gene.cpp"
    "${SRC_METRIC_DIR}/GeneManager.cpp"
    "${SRC_METRIC_DIR}/GrowthData.cpp"
    "${SRC_METRIC_DIR}/GrowthDataRanker.cpp"
    "${SRC_METRIC_DIR}/MetricTypeRegistry.cpp"
    "${SRC_METRIC_DIR}/MetricManager.cpp"
    "${SRC_METRIC_DIR}/Metric.cpp"
    "${SRC_METRIC_DIR}/MetricSet.cpp"
    "${SRC_METRIC_DIR}/MetricType.cpp"
    "${SRC_METRIC_DIR}/MetricValue.cpp"
    "${SRC_METRIC_DIR}/Phenotype.cpp"
    "${SRC_METRIC_DIR}/PhenotypeManager.cpp"
    "${SRC_METRIC_DIR}/RegionMetricType.cpp"
    "${SRC_METRIC_DIR}/StatsManager.cpp"
    "${SRC_METRIC_DIR}/Syndrome.cpp"
    "${SRC_METRIC_DIR}/SyndromeManager.cpp"

    "${SRC_REPORT_DIR}/Report.cpp"
    "${SRC_REPORT_DIR}/ReportManager.cpp"

    "${SRC_VIS_DIR}/AngleView.cpp"
    "${SRC_VIS_DIR}/AngleVisualiser.cpp"
    "${SRC_VIS_DIR}/AsymmetryView.cpp"
    "${SRC_VIS_DIR}/AsymmetryVisualiser.cpp"
    "${SRC_VIS_DIR}/BoundingView.cpp"
    "${SRC_VIS_DIR}/BoundingVisualisation.cpp"
    "${SRC_VIS_DIR}/ColourVisualisation.cpp"
    "${SRC_VIS_DIR}/DepthVisualiser.cpp"
    "${SRC_VIS_DIR}/DistanceVisualiser.cpp"
    "${SRC_VIS_DIR}/FaceView.cpp"
    "${SRC_VIS_DIR}/LabelsView.cpp"
    "${SRC_VIS_DIR}/LandmarkLabelsView.cpp"
    "${SRC_VIS_DIR}/LandmarkSetView.cpp"
    "${SRC_VIS_DIR}/LandmarksVisualisation.cpp"
    "${SRC_VIS_DIR}/LineView.cpp"
    "${SRC_VIS_DIR}/LineVisualiser.cpp"
    "${SRC_VIS_DIR}/LoopView.cpp"
    "${SRC_VIS_DIR}/LoopVisualiser.cpp"
    "${SRC_VIS_DIR}/MaskView.cpp"
    "${SRC_VIS_DIR}/MaskVisualisation.cpp"
    "${SRC_VIS_DIR}/MetricVisualiser.cpp"
    "${SRC_VIS_DIR}/OutlinesVisualisation.cpp"
    "${SRC_VIS_DIR}/PathView.cpp"
    "${SRC_VIS_DIR}/PathSetView.cpp"
    "${SRC_VIS_DIR}/PathSetVisualisation.cpp"
    "${SRC_VIS_DIR}/PlaneView.cpp"
    "${SRC_VIS_DIR}/PlaneVisualisation.cpp"
    "${SRC_VIS_DIR}/PointsView.cpp"
    "${SRC_VIS_DIR}/PolyLabelsView.cpp"
    "${SRC_VIS_DIR}/RadialSelectView.cpp"
    "${SRC_VIS_DIR}/RadialSelectVisualisation.cpp"
    "${SRC_VIS_DIR}/RegionVisualiser.cpp"
    "${SRC_VIS_DIR}/SimpleView.cpp"
    "${SRC_VIS_DIR}/SphereView.cpp"
    "${SRC_VIS_DIR}/VertexLabelsView.cpp"

    "${SRC_WIDGET_DIR}/ChartDialog.cpp"
    "${SRC_WIDGET_DIR}/CheckAllTableHeader.cpp"
    "${SRC_WIDGET_DIR}/LandmarksCheckDialog.cpp"
    "${SRC_WIDGET_DIR}/IntTableWidgetItem.cpp"
    "${SRC_WIDGET_DIR}/LandmarksDialog.cpp"
    "${SRC_WIDGET_DIR}/MetricsDialog.cpp"
    "${SRC_WIDGET_DIR}/MeshInfoDialog.cpp"
    "${SRC_WIDGET_DIR}/PhenotypesDialog.cpp"
    "${SRC_WIDGET_DIR}/ReportChooserDialog.cpp"
    "${SRC_WIDGET_DIR}/ResizeDialog.cpp"
    "${SRC_WIDGET_DIR}/ScanInfoDialog.cpp"

    "${SRC_DIR}/Ethnicities.cpp"
    "${SRC_DIR}/FaceAssessment.cpp"
    "${SRC_DIR}/FaceModel.cpp"
    "${SRC_DIR}/FaceModelCurvature.cpp"
    "${SRC_DIR}/FaceModelCurvatureStore.cpp"
    "${SRC_DIR}/FaceModelDelta.cpp"
    "${SRC_DIR}/FaceModelDeltaStore.cpp"
    "${SRC_DIR}/FaceModelSymmetry.cpp"
    "${SRC_DIR}/FaceModelSymmetryStore.cpp"
    "${SRC_DIR}/FaceModelViewer.cpp"
    "${SRC_DIR}/FaceTypes.cpp"
    "${SRC_DIR}/FaceViewSet.cpp"
    "${SRC_DIR}/MaskRegistration.cpp"
    "${SRC_DIR}/MiscFunctions.cpp"
    "${SRC_DIR}/ModelSelect.cpp"
    "${SRC_DIR}/ModelViewer.cpp"
    "${SRC_DIR}/ModelViewerAnnotator.cpp"
    "${SRC_DIR}/MultiFaceModelViewer.cpp"
    "${SRC_DIR}/Path.cpp"
    "${SRC_DIR}/PathSet.cpp"
    "${SRC_DIR}/U3DCache.cpp"
    )

set( RCC_FILE "FaceTools_res.qrc")

qt5_wrap_ui( FORM_HEADERS ${FORMS})
qt5_wrap_cpp( QOBJECT_MOCS ${QOBJECTS})
qt5_add_resources( RESOURCE_FILE "${RCC_FILE}")

#cmake_policy( SET CMP0115 OLD)
add_library( ${PROJECT_NAME} ${SRC_FILES} ${QOBJECT_MOCS} ${INCLUDE_FILES} ${FORM_HEADERS} ${FORMS} ${RESOURCE_FILE} ${RCC_FILE})
include( "cmake/LinkLibs.cmake")

install( DIRECTORY "${PROJECT_SOURCE_DIR}/haarcascades" DESTINATION "${LIB_PRE_REQS}/${PROJECT_NAME}")
